put stay button in

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <Div>Player</Div>
 <button id="deal">Deal</button>
 <button id="hit">Hit</button>
+<button id="stay">Stay</button>
 </body>
 </html>
 
