solve ace logic and buttons

--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 </head>
 <header>Lets Play</header>
 <body>
+	<h2 id="message">message</h2>
+	<div class="dealer-container">
     <Div>Dealer</Div>
+	</div>
+	<div class="player-container">
     <Div>Player</Div>
+	</div>
+<div class="button-container"></div>
 <button id="deal">Deal</button>
 <button id="hit">Hit</button>
 <button id="stay">Stay</button>
+</div>
 </body>
 </html>
 
