--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 <button id="deal">Deal</button>
 <button id="hit">Hit</button>
 <button id="stay">Stay</button>
+<button id="5">$5</button>
+<button id="10">$10</button>
+<button id="25">$25</button>
+<button id="bet">Place your bets</button>
+
 </div>
 </body>
 </html>
