--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
-<!DOCTYPE hmtl> 
+<!DOCTYPE html> 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link href="./css/cardstarter.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/style.css">
 	<script defer src="./Blackjack.js"></script>
-    <title>Blackjack</title>
+	<title>Blackjack</title>
 </head>
-<header>Lets Play</header>
 <body>
-	<h2 id="message">message</h2>
+	<h2 id="message">Lets play some black jack</h2>
 	<div class="dealer-container">
-    <Div>Dealer</Div>
+		<h3>Dealer</h3>
+		<div id="dealer-hand">
+			<div class="card large back-blue"></div>
+			<div class="card large D08"></div>
+		</div>
 	</div>
 	<div class="player-container">
-    <Div>Player</Div>
+		<h3>Player</h3>
+		<div id="player-hand">
+			<div class="card large DJ"></div>
+			<div class="card large SA"></div>
+		</div>
+		<h2 id="bet-total">Bet: $0</h2>
 	</div>
-<div class="button-container"></div>
-<button id="deal">Deal</button>
-<button id="hit">Hit</button>
-<button id="stay">Stay</button>
-<button id="5">$5</button>
-<button id="10">$10</button>
-<button id="25">$25</button>
-<button id="bet">Place your bets</button>
-
-</div>
+	<div class="button-container">
+		<button id="deal">Deal</button>
+		<button id="hit">Hit</button>
+		<button id="stay">Stay</button>
+		<button id="reset">Reset Game</button>
+		<div>
+			<button id="bet">Place your bets</button>
+			<div id="bet-buttons">
+				<button class="bet-button" id="bet5">$5</button>
+				<button class="bet-button" id="bet10">$10</button>
+				<button class="bet-button" id="bet25">$25</button>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
-
