--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Blackjack</title>
 </head>
 <body>
-	<h2 id="message">Lets play some black jack</h2>
+	<h2>Lets play Black Jack</h2>
 	<div class="dealer-container">
 		<h3>Dealer</h3>
 		<div id="dealer-hand">
@@ -19,6 +19,7 @@
 			<div class="card large D08"></div>
 		</div>
 	</div>
+	<h2 id="message"></h2>
 	<div class="player-container">
 		<h3>Player</h3>
 		<div id="player-hand">
@@ -33,7 +34,7 @@
 		<button id="stay">Stay</button>
 		<button id="reset">Reset Game</button>
 		<div>
-			<button id="bet">Place your bets</button>
+			<button id="bet">New Bet</button>
 			<div id="bet-buttons">
 				<button class="bet-button" id="bet5">$5</button>
 				<button class="bet-button" id="bet10">$10</button>
