render cards for player

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 	<div class="dealer-container">
 		<h3>Dealer</h3>
 		<div id="dealer-hand">
-			<div class="card large back-blue"></div>
-			<div class="card large D08"></div>
+			<div class="card large back-red"></div>
+			<div class="card large c02"></div>
 		</div>
 	</div>
 	<h2 id="message"></h2>
 	<div class="player-container">
 		<h3>Player</h3>
 		<div id="player-hand">
-			<div class="card large DJ"></div>
-			<div class="card large SA"></div>
+
 		</div>
 		<h2 id="bet-total">Bet: $0</h2>
 	</div>
