--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="player-hand">
 
 		</div>
-		<h2 id="bet-total">Bet: $0</h2>
+		<h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2> <h2 id="cash">Cash: $0</h2>
 	</div>
 	<div class="button-container">
 		<button id="deal">Deal</button>
