make card be delt face down

--- a/index.html
+++ b/index.html
@@ -18,26 +18,32 @@
 
 		</div>
 	</div>
+	<div>
+		<h2 id="player">Player</h2>
+	</div>
+	<div id="winning">
 	<h2 id="message"></h2>
+	</div>
 	<div class="player-container">
-		<h3>Player</h3>
 		<div id="player-hand">
 
 		</div>
-		<h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2> <h2 id="cashtext">Cash: $<span id="cash">1000</span></h2>
 	</div>
 	<div class="button-container">
-		<button id="deal">Deal</button>
-		<button id="hit">Hit</button>
-		<button id="stay">Stay</button>
-		<button id="reset">Reset Game</button>
-		<div>
-			<div id="bet-buttons">
-				<button class="bet-button" id="bet5">$5</button>
-				<button class="bet-button" id="bet10">$10</button>
-				<button class="bet-button" id="bet25">$25</button>
-			</div>
+		<div><button id="deal">Deal</button></div>
+		<div><button id="hit">Hit</button></div>
+		<div><button id="stay">Stay</button></div>
+		<div><button id="reset">Reset Game</button></div>
+		
+		<div id="bet-buttons">
+			<div><button class="bet-button" id="bet5">$5</button></div>
+			<div><button class="bet-button" id="bet10">$10</button></div>
+			<div><button class="bet-button" id="bet25">$25</button></div>
 		</div>
+	<div class="cash-bet">
+		<h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2> 
+		<h2 id="cashtext">Cash: $<span id="cash">1000</span></h2>
+	</div>
 	</div>
 </body>
 </html>
