--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<script defer src="./Blackjack.js"></script>
 	<title>Blackjack</title>
+	<link rel="icon" type="image/x-icon" href="./images/PokerChips-03.png">
 </head>
 <body>
 	<h2>Lets play Black Jack</h2>
+	<div id="deale">
+	<h3>Dealer</h3>
+	</div>
 	<div class="dealer-container">
-		<h3>Dealer</h3>
 		<div id="dealer-hand">
 
 		</div>
