--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<link rel="icon" type="image/x-icon" href="./images/PokerChips-03.png">
 </head>
 <body>
-	<h2>Lets play Black Jack</h2>
+	<div id="title">
+	<h1>Lets play Black Jack</h1>
+	</div>
 	<div id="deale">
 	<h3>Dealer</h3>
 	</div>
@@ -21,8 +23,8 @@
 
 		</div>
 	</div>
-	<div>
-		<h2 id="player">Player</h2>
+	<div id="playa">
+		<h2>Player</h2>
 	</div>
 	<div id="winning">
 	<h2 id="message"></h2>
@@ -43,9 +45,9 @@
 			<div><button class="bet-button" id="bet10">$10</button></div>
 			<div><button class="bet-button" id="bet25">$25</button></div>
 		</div>
-	<div class="cash-bet">
-		<h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2> 
-		<h2 id="cashtext">Cash: $<span id="cash">1000</span></h2>
+	<div id="cash-bet">
+		<h2>Bet: $<span id="bettotal">0</span></h2> 
+		<h2>Cash: $<span id="cash">1000</span></h2>
 	</div>
 	</div>
 </body>
