Fix some of the css

--- a/index.html
+++ b/index.html
@@ -27,21 +27,23 @@
       </div>
     </div>
     <div class="button-container">
-      <div>
-        <button id="deal">Deal</button>
-      </div>
-      <div>
-        <button id="hit">Hit</button>
-      </div>
-      <div>
-        <button id="stay">Stay</button>
-      </div>
+      <div class="dhs-container">
+        <div>
+          <button id="deal">Deal</button>
+        </div>
+        <div>
+          <button id="hit">Hit</button>
+        </div>
+        <div>
+          <button id="stay">Stay</button>
+        </div>
+    </div>
       <div>
         <button id="reset">Reset Game</button>
       </div>
       <div id="bet-buttons">
         <div>
-          <button class="bet-button" id="bet5">$5</button>
+          <button class="bet-button"  id="bet5">$5</button>
         </div>
         <div>
           <button class="bet-button" id="bet10">$10</button>
@@ -52,7 +54,7 @@
       </div>
       <div class="cash-bet">
         <h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2> 
-        <h2 id="cashtext">Cash: $<span id="cash"></span></h2>
+        <h2 id="cashtext">Cash: $<span id="cash">0</span></h2>
       </div>
     </div>
   </body>
