add final touches on css

--- a/index.html
+++ b/index.html
@@ -26,36 +26,36 @@
       <div id="player-hand">
       </div>
     </div>
-    <div class="button-container">
-      <div class="dhs-container">
-        <div>
-          <button id="deal">Deal</button>
-        </div>
-        <div>
-          <button id="hit">Hit</button>
-        </div>
-        <div>
-          <button id="stay">Stay</button>
-        </div>
+    
+    <div id="dhs-container">
+      <button id="deal">Deal</button>
+      <button id="hit">Hit</button>
+      <button id="stay">Stay</button>
     </div>
+
+    <div id="bet-buttons">
+      <div>
+        <button class="bet-button"  id="bet5">$5</button>
+      </div>
+      <div>
+        <button class="bet-button" id="bet10">$10</button>
+      </div>
+      <div>
+        <button class="bet-button" id="bet25">$25</button>
+      </div>
+    </div>
+    
+    <div class="cash-bet">
+      <div>
+      <h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2>
+      </div>
+      <div>
+      <h2 id="cashtext">Cash: $<span id="cash">0</span></h2>
+      </div>
       <div>
         <button id="reset">Reset Game</button>
       </div>
-      <div id="bet-buttons">
-        <div>
-          <button class="bet-button"  id="bet5">$5</button>
-        </div>
-        <div>
-          <button class="bet-button" id="bet10">$10</button>
-        </div>
-        <div>
-          <button class="bet-button" id="bet25">$25</button>
-        </div>
-      </div>
-      <div class="cash-bet">
-        <h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2> 
-        <h2 id="cashtext">Cash: $<span id="cash">0</span></h2>
-      </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
