--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="title">
-      <h1>Lets play Black Jack</h1>
+      <h1>Let's play Black Jack</h1>
     </div>
     <div class="dealer-container">
       <div id="dealer-hand">
