--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="./css/cardstarter.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./Blackjack.js"></script>
+    <script defer src="./blackjack.js"></script>
     <title>Blackjack</title>
     <link rel="icon" type="image/x-icon" href="./images/PokerChips-03.png">
   </head>
@@ -26,36 +26,34 @@
       <div id="player-hand">
       </div>
     </div>
-    
-    <div id="dhs-container">
-      <button id="deal">Deal</button>
-      <button id="hit">Hit</button>
-      <button id="stay">Stay</button>
+    <div id="dhsb">
+      <div id="dhs-container">
+        <button id="deal">Deal</button>
+        <button id="hit">Hit</button>
+        <button id="stay">Stay</button>
+      </div>
+      <div id="bet-buttons">
+        <div>
+          <button class="bet-button" id="bet5">$5</button>
+        </div>
+        <div>
+          <button class="bet-button" id="bet10">$10</button>
+        </div>
+        <div>
+          <button class="bet-button" id="bet25">$25</button>
+        </div>
+      </div>
     </div>
-
-    <div id="bet-buttons">
-      <div>
-        <button class="bet-button"  id="bet5">$5</button>
-      </div>
-      <div>
-        <button class="bet-button" id="bet10">$10</button>
-      </div>
-      <div>
-        <button class="bet-button" id="bet25">$25</button>
-      </div>
-    </div>
-    
     <div class="cash-bet">
       <div>
-      <h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2>
+        <h2 id="bet-total">Bet: $<span id="bettotal">0</span></h2>
       </div>
       <div>
-      <h2 id="cashtext">Cash: $<span id="cash">0</span></h2>
+        <h2 id="cashtext">Cash: $<span id="cash">0</span></h2>
       </div>
       <div>
         <button id="reset">Reset Game</button>
       </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
