--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="./css/cardstarter.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./blackjack.js"></script>
+    <script defer src="./js/app.js"></script>
     <title>Blackjack</title>
     <link rel="icon" type="image/x-icon" href="./images/PokerChips-03.png">
   </head>
